# kohori

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
examples/: complex_schema_diff.rs  schema_diff.rs  simple.rs
src/: dialect.rs  error.rs  lib.rs  migration.rs  rls.rs  schema.rs
