[package]
name = "kohori"
version = "0.1.0"
edition = "2021"
description = "こほり: A Rust-based schema model for database migrations with RLS support"
authors = ["Gftd", "Jun Kawasaki"]
license = "MIT"
repository = "https://github.com/jun784/kohori"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
regex = "1.9"

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"
tempfile = "3.8"

[[example]]
name = "simple"
path = "examples/simple.rs"

[workspace]
members = [
    ".",
] 